# limebar

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  example.sh  flake.nix  limebar  limebar.c  main.c  main.cc  main.h  makefile
src/: args.py
